# prefect-template

./: .env.template  .gitignore  README.md  env.template  logging.yml  notebook.ipynb  prefect_filters.py  pyproject.toml  serve.sh
src/example/: flow.py
src/example/flows/: my_flow.py
src/example/notebooks/: something.ipynb
src/example/utils/: env.py  prefect.py
src/prefect_template/flows/: my_flow.py
src/prefect_template/utils/: prefect.py
